# ssh-cli-server

./: README.rst  ideas.txt  pylintrc  pyproject.toml  requirements.txt
docs/source/: conf.py  examples.rst  limitations.rst  module_api.rst  usage.rst
examples/: runserver.py
ssh_cli_server/: __init__.py  abstract_cli.py  base_cli.py  connection_info.py  demo_cli.py  keymanager.py  passwordmanager.py  runserver.py  server.py  serverconfig.py  ssh_cli_server.py  sshcli_prompttoolkit_session.py
sshcliserver/: __init__.py  runserver.py
tests/: _test_cli.py  test_base_cli.py  test_cli.py  test_passwordmanager.py  test_server.py
