[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-cli-server"
description = "Library to provide an SSH Server serving easily customizable command line interfaces."
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name="Thomas Holland", email="thomas@innot.de"}
]
keywords = ["cli", "ssh", "server", "library", "argparse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Software Development",
    "Topic :: System :: Shells",
    "Topic :: Utilities"
]
dependencies = [
    "argparsedecorator",
    "prompt-toolkit",
    "asyncssh",
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/innot/sshcliserver"
Documentation = "https://sshcliserver.readthedocs.com"
download = "https://github.com/innot/sshcliserver/releases"
tracker = "https://github.com/innot/sshcliserver/issues"

[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx-rtd-theme"
]

[project.scripts]
sshcliserver = "sshcliserver.runserver:main"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

# uncomment when not beta anymore
# [tool.setuptools]
# packages = ["ssh_cli_server"]
# package-dir = { const = "" }

[tool.setuptools_scm]
